tests/ui/consts/promoted_const_call.stderr
error: const `impl` for trait `Drop` which is not marked with `#[const_trait]`
  --> $DIR/promoted_const_call.rs:6:12
   |
LL | impl const Drop for Panic { fn drop(&mut self) { panic!(); } }
   |            ^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:10:26
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:10:30
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------        ^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:16:26
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:16:30
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------        ^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:19:26
   |
LL |     let _: &'static _ = &&(Panic, 0).1;
   |            ----------    ^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:19:27
   |
LL |     let _: &'static _ = &&(Panic, 0).1;
   |            ----------     ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0716`.
